# atlas-multi-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  apprunner.yaml  pyproject.toml
.streamlit/: config.toml
docs/: Atlas_Report.docx  deploy.md  email_to_tyler.md
src/atlas/: __init__.py  cli.py  config.py  llm.py  logging.py
src/atlas/agents/: critic.py  planner.py  researcher.py  security.py  writer.py
src/atlas/graph/: build.py  state.py
src/atlas/guardrails/: content.py  input.py  output.py  patterns.py
src/atlas/tools/: search.py
src/atlas/ui/: app.py
src/atlas/web/: server.py
src/atlas/web/templates/: index.html
tests/: test_graph_structure.py  test_patterns.py  test_search_tool.py
